--- a/client/scss/_competition.scss
+++ b/client/scss/_competition.scss
@@ -24,7 +24,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     .panel-heading-reverse,.panel-footer {
       display: flex;
@@ -34,7 +34,6 @@
 
     .panel-body {
       flex-grow: 1;
-      overflow: scroll;
     }
   }
 
@@ -109,7 +108,7 @@
     .panel-body {
       flex-grow: 1;
       flex-direction: column;
-      overflow: scroll;
+      overflow: auto;
     }
   }
 
