--- a/client/scss/_effects.scss
+++ b/client/scss/_effects.scss
@@ -51,7 +51,7 @@
 
 .small-cards-modal {
   flex-grow: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .hand-wrap {
     background: rgba(0, 0, 0, .8);
