--- a/client/scss/_lobby.scss
+++ b/client/scss/_lobby.scss
@@ -63,7 +63,7 @@
 
 
 .lobby-panel {
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 100%;
   display: flex;
   flex-direction: column;
